# exemplo_pytest

./: README.md  config.py  docker-compose.yaml  main.py  messaging.py  mise.toml  processor.py  pyproject.toml  validation.py  yoyo.ini
migrations/: 20250930_01_T6hdK-create-table-pessoa.sql
repository/: pessoa.py  pessoa_sql.py
test/: conftest.py  test_hash.py  test_processor.py  test_validation.py
test/repository/: test_pessoa.py
utils/: hash.py
