[tool.poetry]
name = "apresentacao-pytest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yoyo-migrations = "^9.0.0"
psycopg2 = "^2.9.10"
kafka-python = "^2.2.15"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
testcontainers = {extras = ["postgresql"], version = "^4.13.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
